--- a/UI/index.html
+++ b/UI/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Hot News</title>
+    <script src="articles.js" async></script>
 </head>
 <body>
 <header>
@@ -65,6 +66,66 @@
                 эпизода — в роли чемпиона мира был представлен школьник. Удивительно, что на сюжет бурно отреагировали
                 очень многие дотеры: одни критиковали КВНщиков за флаги команд, другие — за неуважение к коммьюнити и
                 слабые знания игрового процесса. Свою лепту внесли и известные в Сети группы и сообщества..&hellip;<a
+                        href=#>Подробнее</a>
+            </p>
+        </article>
+        <article class="news">
+            <p class="newsHead">
+                «Возвращение Шараповой»</p>
+            <div class="date">26 февраля 2017 22:00</div>
+            <footer class="span">
+                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
+                <span class="newLine">
+                        Теги:
+                        <a class="tags" href=#>Теннис</a>
+                        <a class="tags" href=#>Спорт</a>
+                        <a class="tags" href=#>Шарапова</a>
+                    </span>
+            </footer>
+            <p class="newsText">Острое проявление равнодушия.
+
+                «Возвращение Шараповой? Теннисисткам все равно, будет ли играть Мария или нет. Я уже и не помню ее. Я
+                полагаю, для организаторов турнира и спонсоров участие Марии – это благо.&hellip;<a
+                        href=#>Подробнее</a>
+            </p>
+        </article>
+        <article class="news">
+            <p class="newsHead">
+                «Возвращение Шараповой»</p>
+            <div class="date">26 февраля 2017 22:00</div>
+            <footer class="span">
+                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
+                <span class="newLine">
+                        Теги:
+                        <a class="tags" href=#>Теннис</a>
+                        <a class="tags" href=#>Спорт</a>
+                        <a class="tags" href=#>Шарапова</a>
+                    </span>
+            </footer>
+            <p class="newsText">Острое проявление равнодушия.
+
+                «Возвращение Шараповой? Теннисисткам все равно, будет ли играть Мария или нет. Я уже и не помню ее. Я
+                полагаю, для организаторов турнира и спонсоров участие Марии – это благо.&hellip;<a
+                        href=#>Подробнее</a>
+            </p>
+        </article>
+        <article class="news">
+            <p class="newsHead">
+                «Возвращение Шараповой»</p>
+            <div class="date">26 февраля 2017 22:00</div>
+            <footer class="span">
+                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
+                <span class="newLine">
+                        Теги:
+                        <a class="tags" href=#>Теннис</a>
+                        <a class="tags" href=#>Спорт</a>
+                        <a class="tags" href=#>Шарапова</a>
+                    </span>
+            </footer>
+            <p class="newsText">Острое проявление равнодушия.
+
+                «Возвращение Шараповой? Теннисисткам все равно, будет ли играть Мария или нет. Я уже и не помню ее. Я
+                полагаю, для организаторов турнира и спонсоров участие Марии – это благо.&hellip;<a
                         href=#>Подробнее</a>
             </p>
         </article>
