--- a/UI/index.html
+++ b/UI/index.html
@@ -11,7 +11,7 @@
         <div id="name"><p>UserName</p></div>
     </div>
     <hgroup>
-        <h1><a href=#>Hot News</a></h1>
+        <h1><a href=# class="siteName">Hot News</a></h1>
         <img src="images\logo.png" id="logo">
         <h2>Самые горячие новости только у нас</h2>
     </hgroup>
