added DOM, will be fixed

--- a/UI/index.html
+++ b/UI/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <header>
-    <div id="user">
-        <div id="name"><p>UserName</p></div>
+    <div class="user">
+        <div class="name"><p>UserName</p></div>
     </div>
     <hgroup>
         <h1><a href=# class="siteName">Hot News</a></h1>
-        <img src="images\logo.png" id="logo">
+        <img src="images\logo.png" class="logo">
         <h2>Самые горячие новости только у нас</h2>
     </hgroup>
-    <nav id=global>
+    <nav class=global>
         <ul>
             <li><a href=# class="this">Главная</a></li>
             <li><a href=# class="other">Добавить новость</a></li>
@@ -47,108 +47,9 @@
 <br>
 <br>
 <br>
-<div>
-    <div>
-        <article class="news">
-            <p class="newsHead">КВНщики извинились за шутку про Dota</p>
-            <div class="date">26 февраля 2017 21:00</div>
-            <footer class="span">
-                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
-                <span class="newLine">
-                        Теги:
-                        <a class="tags" href=#>Dota2</a>
-                        <a class="tags" href=#>киберспорт</a>
-                        <a class="tags" href=#>квн</a>
-                    </span>
-            </footer>
-            <p class="newsText">Возмущение киберсообщества вызвало использование моментов матча между Na'Vi и iG, а
-                также развязка
-                эпизода — в роли чемпиона мира был представлен школьник. Удивительно, что на сюжет бурно отреагировали
-                очень многие дотеры: одни критиковали КВНщиков за флаги команд, другие — за неуважение к коммьюнити и
-                слабые знания игрового процесса. Свою лепту внесли и известные в Сети группы и сообщества..&hellip;<a
-                        href=#>Подробнее</a>
-            </p>
-        </article>
-        <article class="news">
-            <p class="newsHead">
-                «Возвращение Шараповой»</p>
-            <div class="date">26 февраля 2017 22:00</div>
-            <footer class="span">
-                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
-                <span class="newLine">
-                        Теги:
-                        <a class="tags" href=#>Теннис</a>
-                        <a class="tags" href=#>Спорт</a>
-                        <a class="tags" href=#>Шарапова</a>
-                    </span>
-            </footer>
-            <p class="newsText">Острое проявление равнодушия.
+<div class="clearfix">
+    <div class="content">
 
-                «Возвращение Шараповой? Теннисисткам все равно, будет ли играть Мария или нет. Я уже и не помню ее. Я
-                полагаю, для организаторов турнира и спонсоров участие Марии – это благо.&hellip;<a
-                        href=#>Подробнее</a>
-            </p>
-        </article>
-        <article class="news">
-            <p class="newsHead">
-                «Возвращение Шараповой»</p>
-            <div class="date">26 февраля 2017 22:00</div>
-            <footer class="span">
-                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
-                <span class="newLine">
-                        Теги:
-                        <a class="tags" href=#>Теннис</a>
-                        <a class="tags" href=#>Спорт</a>
-                        <a class="tags" href=#>Шарапова</a>
-                    </span>
-            </footer>
-            <p class="newsText">Острое проявление равнодушия.
-
-                «Возвращение Шараповой? Теннисисткам все равно, будет ли играть Мария или нет. Я уже и не помню ее. Я
-                полагаю, для организаторов турнира и спонсоров участие Марии – это благо.&hellip;<a
-                        href=#>Подробнее</a>
-            </p>
-        </article>
-        <article class="news">
-            <p class="newsHead">
-                «Возвращение Шараповой»</p>
-            <div class="date">26 февраля 2017 22:00</div>
-            <footer class="span">
-                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
-                <span class="newLine">
-                        Теги:
-                        <a class="tags" href=#>Теннис</a>
-                        <a class="tags" href=#>Спорт</a>
-                        <a class="tags" href=#>Шарапова</a>
-                    </span>
-            </footer>
-            <p class="newsText">Острое проявление равнодушия.
-
-                «Возвращение Шараповой? Теннисисткам все равно, будет ли играть Мария или нет. Я уже и не помню ее. Я
-                полагаю, для организаторов турнира и спонсоров участие Марии – это благо.&hellip;<a
-                        href=#>Подробнее</a>
-            </p>
-        </article>
-        <article class="news">
-            <p class="newsHead">
-                «Возвращение Шараповой»</p>
-            <div class="date">26 февраля 2017 22:00</div>
-            <footer class="span">
-                <span>Автор: </span><a class="tags" href=#><strong>admin</strong></a>
-                <span class="newLine">
-                        Теги:
-                        <a class="tags" href=#>Теннис</a>
-                        <a class="tags" href=#>Спорт</a>
-                        <a class="tags" href=#>Шарапова</a>
-                    </span>
-            </footer>
-            <p class="newsText">Острое проявление равнодушия.
-
-                «Возвращение Шараповой? Теннисисткам все равно, будет ли играть Мария или нет. Я уже и не помню ее. Я
-                полагаю, для организаторов турнира и спонсоров участие Марии – это благо.&hellip;<a
-                        href=#>Подробнее</a>
-            </p>
-        </article>
     </div>
 </div>
 <div class="paginator">
@@ -164,5 +65,21 @@
     <p class="footer"> Hot News. Сергей Водчиц. БГУ ФПМИ 2 курс 6 группа. E-mail: sergey_vodchits@mail.ru.
         27.02.2017</p>
 </footer>
+<!-- templates -->
+<template id="template-article-list-item">
+    <div class="article-list-item" data-id="id">
+        <h3 class="article-list-item-title">
+            Заголовок статьи
+        </h3>
+        <p class="article-list-item-summary">
+            Краткое описание для статьи. Тут краткое описание
+        </p>
+        <div class="article-list-item-meta">
+            <span>Автор: <span class="article-list-item-author">Автор</span></span>
+            <span>Теги: <span class="article-list-item-tags">Список тегов</span></span>
+            <span>Опубликована: <span class="article-list-item-date">12.12.1995 04:35</span></span>
+        </div>
+    </div>
+</template>
 </body>
 </html>
