Some functions have been debugged. Sorry, it will be completed by 22:00, I hope ...

--- a/UI/index.html
+++ b/UI/index.html
@@ -47,7 +47,7 @@
 <br>
 <br>
 <br>
-<div class="clearfix">
+<div>
     <div class="content">
 
     </div>
@@ -78,6 +78,8 @@
             <span>Автор: <span class="article-list-item-author">Автор</span></span>
             <span>Теги: <span class="article-list-item-tags">Список тегов</span></span>
             <span>Опубликована: <span class="article-list-item-date">12.12.1995 04:35</span></span>
+            <br>
+            <br>
         </div>
     </div>
 </template>
