add DOM, but it'll be fixed

--- a/UI/index.html
+++ b/UI/index.html
@@ -15,11 +15,10 @@
         <img src="images\logo.png" class="logo">
         <h2>Самые горячие новости только у нас</h2>
     </hgroup>
-    <nav class=global>
-        <ul>
-            <li><a href=# class="this">Главная</a></li>
-            <li><a href=# class="other">Добавить новость</a></li>
-            <li><a href=# class="other">Выход</a></li>
+    <nav class="global">
+        <ul class = "buttons">
+            <li class = "buttons"><a href=# class="this">Главная</a></li>
+            <li class = "buttons"> <a href=# class="logButton">Войти</a></li>
         </ul>
     </nav>
     <hgroup>
