--- a/UI/index.html
+++ b/UI/index.html
@@ -18,6 +18,7 @@
     <nav class="global">
         <ul class = "buttons">
             <li class = "buttons"><a href=# class="this">Главная</a></li>
+            <li class = "buttons"><a href=# id="add-new-button">Добать новость</a></li>
             <li class = "buttons"> <a href=# class="logButton">Войти</a></li>
         </ul>
     </nav>
@@ -73,6 +74,7 @@
         <p class="article-list-item-summary">
             Краткое описание для статьи. Тут краткое описание
         </p>
+        <a class="button" href=#>Показать полностью</a>
         <div class="article-list-item-meta">
             <span>Автор: <span class="article-list-item-author">Автор</span></span>
             <span>Теги: <span class="article-list-item-tags">Список тегов</span></span>
