--- a/UI/index.html
+++ b/UI/index.html
@@ -17,7 +17,7 @@
     </hgroup>
     <nav class="global">
         <ul>
-            <li><a href=# class="this">Главная</a></li>
+            <li><a href=# id="main-page" class="this">Главная</a></li>
             <li><a href=# id="add-new-button">Добать новость</a></li>
             <li><a href=# id="logButton">Войти</a></li>
         </ul>
@@ -26,7 +26,7 @@
         <h3 class="this"></h3>
     </hgroup>
 </header>
-<div class="filters">
+<div class="filters" id="filters">
     <aside>
         <h1>Фильтры:</h1>
         <section>
@@ -36,13 +36,11 @@
         </section>
         <section>
             <h2>Имя автора:</h2>
-            <span><input id="author-filter" type="text" placeholder="Введите имя автора"
-                         onkeypress="return authorFilter(event)"></span>
+            <span><input id="author-filter" type="text" placeholder="Введите имя автора"></span>
         </section>
         <section>
             <h2>Теги:</h2>
-            <span><input id="tags-filter" type="text" placeholder="Введите тег"
-                         onkeypress="return tagsFilter(event)"></span>
+            <span><input id="tags-filter" type="text" placeholder="Введите тег"></span>
         </section>
         <button id="filter-button">Применить</button>
     </aside>
@@ -72,19 +70,58 @@
         <p class="article-list-item-summary">
             Краткое описание для статьи. Тут краткое описание
         </p>
-
         <div class="article-list-item-meta">
             <span>Автор: <span class="article-list-item-author">Автор</span></span>
             <span>Теги: <span class="article-list-item-tags">Список тегов</span></span>
             <span>Опубликована: <span class="article-list-item-date">12.12.1995 04:35</span></span>
             <div class="newsButtons">
-                <a class="button" href=#>Показать полностью</a>
-                <a class="button" href=#>Редактировать новость</a>
-                <a class="button" href=#>Удалить новость</a>
+                <a class="button" id="show-button" href=#>Показать полностью</a>
+                <a class="button" id="edit-button" href=#>Редактировать новость</a>
+                <a class="button" id="delete-button" href=#>Удалить новость</a>
             </div>
             <br>
             <br>
         </div>
+    </div>
+</template>
+<template id="template-login-page">
+    <div class="login-page" data-id="id">
+        <h1>
+            Введите логин и пароль:
+        </h1>
+        <section>
+            <h2>Логин:</h2>
+            <span><input id="login" type="text" placeholder="Логин"></span>
+        </section>
+        <section>
+            <h2>Пароль:</h2>
+            <span><input id="password" type="password" placeholder="Пароль"></span>
+        </section>
+        <button id="login-button">Войти</button>
+    </div>
+</template>
+<template id="template-add-news-page">
+    <div class="add-news-page" data-id="id">
+        <h1>
+            Добавление новости:
+        </h1>
+        <section>
+            <h2>Заглавие новости:</h2>
+            <span><textarea id="title" type="text" placeholder="Заглавие новости" style="width: 99.53%"
+                            maxlength="100"></textarea></span>
+        </section>
+        <section>
+            <h2>Краткое описание:</h2>
+            <span><textarea id="summary" type="text" placeholder="Краткое описание" style="width: 99.53%"
+                            maxlength="200" rows="2"></textarea></span>
+        </section>
+        <section>
+            <h2>Текст новости:</h2>
+            <span><textarea id="newsContent" type="text" placeholder="Текст новости" style="width: 99.53%"
+                            rows="10"></textarea></span>
+        </section>
+        <br>
+        <button id="add-button">Добавить новость</button>
     </div>
 </template>
 </body>
